# Embarcados

./: .gitignore
Aula1/260505-095228-zephyr-blink/src/: main.c
Aula10/Atividade_8/: platformio.ini
Aula10/Atividade_8/scripts/: compare_runs.py  plot_accel.py  plot_fir_stage.py
Aula10/Atividade_8/scripts/results/: analysis_answers.txt  fir.csv  fir_summary.csv  rate_comparison.csv  raw.csv  raw_summary.csv
Aula10/Atividade_8/src/: main.c
Aula10/Atividade_8/zephyr/: prj.conf
Aula2/: Gabriel Moraes - 14571122.txt
Aula4/Projeto-PWM/src/: main.c
Aula5/Atividade_3/: platformio.ini
Aula5/Atividade_3/src/: main.c
Aula5/Atividade_4/src/: main.c
Aula5/Atividade_4/zephyr/: CMakeLists.txt  prj.conf
Aula6/Atividade_5/: .gitignore
Aula6/Atividade_5/src/: main.c
Aula6/Atividade_5/zephyr/: CMakeLists.txt  prj.conf
Aula8/Atividade_6/lib/pwm/: pwm_z42.c
Aula8/Atividade_6/src/: main.c
Aula8/Atividade_6/zephyr/: prj.conf
Aula9/Atividade_7/: .gitignore  platformio.ini
Aula9/Atividade_7/src/: main.c  parte1.c  parte2.c
Aula9/Atividade_7/zephyr/: prj.conf
